# pizza-watch

./: .gitignore  README.md  backfill.py  hello.py  package.json  pizza_plan.md  pyproject.toml  scraper.py  test_smoke.py
.beads/: issues.jsonl
